Fixed overflow fon productname

--- a/css/styles.less
+++ b/css/styles.less
@@ -317,7 +317,7 @@ body {
 					&.productName {
 						color: @text;
 						font-weight: bold;
-						overflow: auto;
+						overflow: hidden;
 						font-size: 16px;
 					}
 
